--- a/style.css
+++ b/style.css
@@ -360,47 +360,53 @@ em {
 }
 
 /* line 87 */
+strong em, em strong {
+  font-weight: bold;
+  font-style: italic;
+}
+
+/* line 94 */
 ol {
   padding-inline-start: 32px;
 }
 
-/* line 91 */
+/* line 98 */
 ul {
   padding-inline-start: 32px;
   list-style-type: circle;
 }
 
-/* line 96 */
+/* line 103 */
 p, ol, ul, table, pre {
   margin: 0px auto 16px auto;
 }
 
-/* line 100 */
+/* line 107 */
 .clearfix {
   overflow: auto;
 }
 
-/* line 104 */
+/* line 111 */
 .clearfix::after {
   content: "";
   clear: both;
   display: table;
 }
 
-/* line 110 */
+/* line 117 */
 mjx-container[jax="CHTML"] {
   font-weight: 700;
   margin: unset !important;
   font-size: 110%;
 }
 
-/* line 116 */
+/* line 123 */
 mjx-container[jax="CHTML"][display="true"] {
   font-size: 130%;
   font-weight: normal;
 }
 
-/* line 122 */
+/* line 129 */
 html, body {
   padding: 0;
   text-align: center;
@@ -409,32 +415,32 @@ html, body {
   line-height: 1.5;
 }
 @media screen and (min-width: 35.5em) {
-  /* line 122 */
+  /* line 129 */
   html, body {
     line-height: 1.6;
   }
 }
 
-/* line 136 */
+/* line 143 */
 .pure-g {
   font-family: unset;
 }
-/* line 139 */
+/* line 146 */
 .pure-g [class*="pure-u"] {
   font-family: unset;
 }
 
-/* line 144 */
+/* line 151 */
 input {
   width: 100%;
 }
 
-/* line 149 */
+/* line 156 */
 button, input, select, textarea, .pure-menu-link {
   font-family: "Open Sans", jaf-bernino-sans, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 }
 
-/* line 153 */
+/* line 160 */
 .menu-container {
   display: block;
   cursor: pointer;
@@ -444,35 +450,35 @@ button, input, select, textarea, .pure-menu-link {
   user-select: none;
   max-width: 700px;
 }
-/* line 162 */
+/* line 169 */
 .menu-container .menu-link-home {
   white-space: normal;
 }
-/* line 166 */
+/* line 173 */
 .menu-container input {
   opacity: 0;
   cursor: pointer;
   height: 0;
   width: 0;
 }
-/* line 172 */
+/* line 179 */
 .menu-container input:hover ~ .checkmark {
   color: rgba(0, 0, 0, 0.8);
 }
-/* line 176 */
+/* line 183 */
 .menu-container input:checked ~ .checkmark {
   color: rgba(0, 0, 0, 0.8);
 }
-/* line 180 */
+/* line 187 */
 .menu-container input:checked ~ ul {
   display: inline;
 }
-/* line 183 */
+/* line 190 */
 .menu-container input:checked ~ ul .pure-menu-item {
   display: block;
   height: unset;
 }
-/* line 190 */
+/* line 197 */
 .menu-container .checkmark {
   position: absolute;
   top: 0;
@@ -484,97 +490,97 @@ button, input, select, textarea, .pure-menu-link {
   color: rgba(0, 0, 0, 0.4);
 }
 
-/* line 204 */
+/* line 211 */
 body {
   line-height: 1.4;
   color: rgba(0, 0, 0, 0.8);
   font-weight: 300;
 }
-/* line 210 */
+/* line 217 */
 body nav ul {
   padding-inline-start: unset;
 }
 @media screen and (max-width: 380px) {
-  /* line 214 */
+  /* line 221 */
   body nav .menu-container {
     display: grid;
     grid-template-areas: "menu-sw title" "menu menu";
     grid-template-columns: 32px auto;
   }
-  /* line 222 */
+  /* line 229 */
   body nav a {
     grid-area: title;
   }
-  /* line 226 */
+  /* line 233 */
   body nav ul {
     grid-area: menu;
     display: none;
   }
 }
 @media not screen and (max-width: 380px) {
-  /* line 233 */
+  /* line 240 */
   body nav input, body nav .checkmark {
     display: none;
   }
 }
 
-/* line 242 */
+/* line 249 */
 .calc-form table {
   table-layout: fixed;
 }
-/* line 246 */
+/* line 253 */
 .calc-form tr {
   width: 100%;
 }
-/* line 249 */
+/* line 256 */
 .calc-form td {
   padding: 0 10px 0 10px;
   width: 50%;
 }
 
-/* line 257 */
+/* line 264 */
 .payments tr * {
   padding: 0 10px 0 10px;
   font-family: Consolas, "Deja Vu Sans Mono", "Ubuntu Mono", "Bitstream Vera Sans Mono", Monaco, "Courier New", monospace;
 }
-/* line 262 */
+/* line 269 */
 .payments tr:hover {
   background-color: lightgray;
 }
 
-/* line 267 */
+/* line 274 */
 .collapse-content {
   display: none;
 }
 
-/* line 271 */
+/* line 278 */
 .collapse-content.active {
   display: inherit;
 }
 
-/* line 275 */
+/* line 282 */
 .product-badge {
   max-width: 50%;
   height: auto;
 }
 
-/* line 280 */
+/* line 287 */
 .pure-u-1-2 {
   display: block;
 }
 
-/* line 284 */
+/* line 291 */
 .pure-menu-horizontal {
   white-space: unset;
 }
 
-/* line 288 */
+/* line 295 */
 h1, h2, h3, h4, h5, h6 {
   font-family: "Open Sans", jaf-bernino-sans, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
   font-weight: normal;
 }
 
-/* line 293 */
+/* line 300 */
 h1 {
   font-size: 32px;
   line-height: 1.2;
@@ -584,27 +590,27 @@ h1 {
   text-align: center;
 }
 
-/* line 302 */
+/* line 309 */
 h2 {
   font-size: 24px;
   padding: 16px 0;
   line-height: 1.2;
 }
 
-/* line 308 */
+/* line 315 */
 h3 {
   font-size: 20px;
   padding: 8px 0;
   line-height: 1.2;
 }
 
-/* line 314 */
+/* line 321 */
 a {
   color: rgba(0, 0, 0, 0.8);
   text-decoration: underline;
 }
 
-/* line 319 */
+/* line 326 */
 hr {
   width: 50%;
   background-color: rgba(0, 0, 0, 0.1);
@@ -612,7 +618,7 @@ hr {
   border: 0;
 }
 
-/* line 327 */
+/* line 334 */
 header, main, footer {
   padding: 5px;
   font-weight: 300;
@@ -620,19 +626,19 @@ header, main, footer {
   margin: 0 auto;
 }
 
-/* line 336 */
+/* line 343 */
 nav {
   text-align: left;
   max-width: 1000px;
   margin: 0 auto;
 }
 
-/* line 342 */
+/* line 349 */
 .page, .posts, .pagination, .disclaimer {
   max-width: 700px;
 }
 
-/* line 346 */
+/* line 353 */
 .disclaimer {
   width: 100%;
   text-align: left;
@@ -647,7 +653,7 @@ nav {
   padding: 16px 16px 0 16px;
 }
 
-/* line 362 */
+/* line 369 */
 article {
   width: 100%;
   text-align: left;
@@ -660,27 +666,27 @@ article {
   box-sizing: border-box;
   padding: 20px;
 }
-/* line 375 */
+/* line 382 */
 article header {
   padding: unset;
 }
-/* line 379 */
+/* line 386 */
 article .meta {
   letter-spacing: -0.02em;
   font-size: 14px;
   color: rgba(0, 0, 0, 0.44);
   font-style: italic;
 }
-/* line 388 */
+/* line 395 */
 article h2 a {
   text-decoration: none;
 }
-/* line 393 */
+/* line 400 */
 article .content {
   margin: 0 auto;
 }
 
-/* line 399 */
+/* line 406 */
 .posts article {
   box-shadow: rgba(0, 0, 0, 0.04) 0px 1px 4px 0px;
   border-radius: 3px;
@@ -688,7 +694,7 @@ article .content {
   box-sizing: border-box;
   padding: 20px;
 }
-/* line 406 */
+/* line 413 */
 .posts article h1 {
   font-size: 32px;
   line-height: 1.2;
@@ -697,24 +703,24 @@ article .content {
   margin: 0 auto;
   text-align: left;
 }
-/* line 414 */
+/* line 421 */
 .posts article h1 a {
   text-decoration: none;
 }
 
-/* line 425 */
+/* line 432 */
 .pagination {
   margin-bottom: 30px;
 }
-/* line 428 */
+/* line 435 */
 .pagination .left {
   text-align: left;
 }
-/* line 431 */
+/* line 438 */
 .pagination .right {
   text-align: right;
 }
-/* line 434 */
+/* line 441 */
 .pagination a {
   display: inline-block;
   padding: 5px 5px;
@@ -724,21 +730,21 @@ article .content {
   color: rgba(0, 0, 0, 0.44);
   text-decoration: none;
 }
-/* line 444 */
+/* line 451 */
 .pagination a:hover {
   color: rgba(0, 0, 0, 0.8);
   border-color: rgba(0, 0, 0, 0.3);
   text-decoration: none;
 }
 
-/* line 452 */
+/* line 459 */
 .output::-webkit-inner-spin-button,
 .output::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-/* line 458 */
+/* line 465 */
 .output {
   -moz-appearance: textfield;
   background-color: white;
